--- a/loft-taxi/package.json
+++ b/loft-taxi/package.json
@@ -20,6 +20,7 @@
     "react-router-redux": "^4.0.8",
     "react-scripts": "3.4.1",
     "react-test-renderer": "^16.13.1",
+    "react-toastify": "^6.0.8",
     "redux": "^4.0.5",
     "redux-mock-store": "^1.5.4",
     "redux-saga": "^1.1.3",
